# PingPong

./: .gitignore  CMakeLists.txt
assets/sounds/: finish_sound.flac  lee_sound.flac
assets/sounds/ping_pong/: 5244952364670015762.flac  5244952364670015764.flac  5244952364670015765.flac  5244952364670015766.flac  5244952364670015767.flac  5244952364670015768.flac  5244952364670015769.flac  5244952364670015770 (1).flac  5244952364670015771.flac  5244952364670015772.flac
commands/: build.sh
src/: main.cpp
src/core/: Engine.cpp  MonoBehavior.cpp  Scene.cpp
src/core/assets/: MusicManager.cpp
src/core/colliders/: CircleCollider.cpp  RectCollider.cpp
src/core/ui/: CountdownDisplay.cpp  TextButton.cpp
src/include/: CircleCollider.hpp  Collider.hpp  CollisionType.hpp  CountdownDisplay.hpp  Engine.hpp  GameObject.hpp  GameScreen.hpp  MonoBehavior.hpp  MusicManager.hpp  PingPongBall.hpp  Platform.hpp  PlatformMovingType.hpp  RectCollider.hpp  Scene.hpp  StartScreen.hpp  TextButton.hpp  UiElement.hpp  UiElemets.hpp
src/main/game/: GameScreen.cpp  PingPongBall.cpp  Platform.cpp
src/main/start/: StartScreen.cpp
src/main/start_screen/: StartScreen.cpp
